SPARC64 detection fails on Athena (SPARC64-X)

XMLWordPrintable

    • b01
    • sparc_64
    • solaris
    • Not verified

        In platform_features() (vm_version_solaris_sparc.cpp), we assume all Fujitsu SPARC64 CPUs are either pre-sun4v, or have support for either Athena+ or Athena++ instructions. But the original SPARC64-X (Athena without any pluses) is also a sun4v chip, so it gets mistakenly treated like a non-Fujitsu CPU, leading to crashes when several Oracle-specific "derived/synthetic features", like BIS support, are enabled.

              Assignee:
              David Buck
              Reporter:
              David Buck
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: