8263407: SPARC64 detection fails on Athena (SPARC64-X)

Reviewed-by: mdoerr